mixture version 2.1.1 2024-01-29: 
- In R/*.R files if(start>2) is replaced by	if(startobject==“multi”) 

mixture version 2.1.0 2024-01-22: 
- The user can now set a random seed set for all pcm functions (default is set to 123). 
- Stopping criterion (based on Aitken's acceleration) specified to be within [0,tol_l).
- VVE update modified. 

mixture version 2.0.6 2023-09-26: 
- Alias added to mixture.Rd 
- CXX_STD no longer specified.

mixture version 2.0.5 2022-09-16:
- Multiple random-soft initialization added for all parsimonious models. 
- Further stability improvements.

mixture version 2.0.4 2021-04-14:
- Semi-supervised bug fixes. 

mixture version 2.0.3 2021-03-02:
- Stochastic EM added.
- Stability fixes for skewed models added. 
- Reduced compilation time.
- pcm function added.
- t-eigen family added.

mixture version 2.0.2 2021-01-16:
- Fixed configure file

mixture version 2.0.1 2021-01-15:
- Fixes for solaris.

mixture version 2.0.0 2021-01-11:
- Cpp used.
- Missing data implemented. 
- Mixtures with skewed components (via variance-mean mixtures) added.