@@ -1,11 +1,12 @@
 Package: mixture
 Type: Package
 Title: Mixture Models for Clustering and Classification
-Version: 2.1.1
-Date: 2024-01-29
+Version: 2.1.2
+Date: 2025-05-06
 Authors@R: c(person("Nik", "Pocuca", role=c("aut"), comment = c(ORCID = "0000-0001-8365-0751")), 
             person("Ryan P.", "Browne", role = c("aut"), comment = c(ORCID = "0000-0003-4543-0218")),
-            person("Paul D.", "McNicholas", role = c("aut", "cre"), email = "mcnicholas@math.mcmaster.ca", comment = c(ORCID = "0000-0002-2482-523X")))
+            person("Paul D.", "McNicholas", role = c("aut", "cre"), email = "mcnicholas@math.mcmaster.ca", comment = c(ORCID = "0000-0002-2482-523X")),
+            person("Alexa A.", "Sochaniwsky", role = c("aut")))
 Maintainer: Paul D. McNicholas <mcnicholas@math.mcmaster.ca>
 Description: An implementation of 14 parsimonious mixture models for model-based clustering or model-based classification. Gaussian, Student's t, generalized hyperbolic, variance-gamma or skew-t mixtures are available. All approaches work with missing data. Celeux and Govaert (1995) <doi:10.1016/0031-3203(94)00125-6>, Browne and McNicholas (2014) <doi:10.1007/s11634-013-0139-1>, Browne and McNicholas (2015) <doi:10.1002/cjs.11246>.
 Repository: CRAN
@@ -16,8 +17,10 @@ Imports: Rcpp (>= 1.0.2), methods
 LinkingTo: Rcpp, RcppArmadillo, BH, RcppGSL
 Depends: R (>= 3.5.0), lattice (>= 0.20)
 SystemRequirements: GNU GSL
-Author: Nik Pocuca [aut] (<https://orcid.org/0000-0001-8365-0751>),
-  Ryan P. Browne [aut] (<https://orcid.org/0000-0003-4543-0218>),
-  Paul D. McNicholas [aut, cre] (<https://orcid.org/0000-0002-2482-523X>)
-Packaged: 2024-01-29 18:16:11 UTC; paul
-Date/Publication: 2024-01-30 00:20:07 UTC
+Author: Nik Pocuca [aut] (ORCID: <https://orcid.org/0000-0001-8365-0751>),
+  Ryan P. Browne [aut] (ORCID: <https://orcid.org/0000-0003-4543-0218>),
+  Paul D. McNicholas [aut, cre] (ORCID:
+    <https://orcid.org/0000-0002-2482-523X>),
+  Alexa A. Sochaniwsky [aut]
+Packaged: 2025-05-06 16:37:21 UTC; paul
+Date/Publication: 2025-05-06 17:40:02 UTC
